crates/math-core/tests/snapshots/error_test__digits_unknown_cmd.snap
---
source: crates/math-core/tests/error_test.rs
expression: "1.1\\asdf"
---
Error: Unknown command "\asdf".
   ╭─[ <input>:1:4 ]
   │
 1 │ 1.1\asdf
   │    ──┬──  
   │      ╰──── unknown command
───╯
